# Octane

./: .gitignore  README.md
.github/skills/octra-development/: SKILL.md
.github/skills/oyster-tee-oracle/: SKILL.md
.github/workflows/: oracle-docker.yml
contracts/: main.aml  woct.aml
contracts/interfaces/: IOCS01.aml
docs/: CNAME  graphic.html  index.html  privacy-policy.html
docs/dev/: faucet.html  index.html
docs/docs/: index.html
docs/faucet/: index.html
oracle/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  relay.py  spec.json
oracle/src/: main.rs
scripts/: deploy.py  deploy_woct.py  relay.py
services/faucet/: package.json  server.ts
test-dapp/: index.html  package-lock.json  package.json
wallet/extension/: README.md  manifest.json  offscreen.html  package-lock.json  package.json  privacy-policy.html  tsconfig.json  vite.config.ts
wallet/extension/mock-rpc/: server.ts
wallet/extension/src/background/: index.ts  jobs.ts
wallet/extension/src/content/: index.ts
wallet/extension/src/inpage/: index.ts
wallet/extension/src/lib/: cleanup.ts  constants.ts  crypto.ts  explorer.ts  fees.ts  jobRunner.ts  jobStore.ts  keyVault.ts  proofRouter.ts  pvac.ts  rpc.ts  stealth.ts  storage.ts  tor.ts  txBuilder.ts  types.ts  units.ts  zktlsCache.ts
wallet/extension/src/offscreen/: index.ts  worker.ts
wallet/extension/src/popup/: confirm.html  (+6 more)
wallet/extension/static/: faucet.html  pvac-demo.html
wallet/extension/test/: pvac_api.cjs  pvac_wasm_all.cjs
wallet/prover/: Cargo.toml  build.rs
wallet/prover/src/: main.rs  pvac.rs
(+11 files in other folders)
