[package]
name = "octane-prover"
version = "0.1.0"
edition = "2021"
description = "Native desktop prover for Octane Wallet — outsources PVAC range proof computation"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1"
